--- a/css/styles.css
+++ b/css/styles.css
@@ -444,8 +444,25 @@ h3 {
 }
 
 .examples-link:hover {
-       box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
 
+.examples-link:hover .examples-thumb::before {
+    opacity: 1;
+}
+
+.examples-thumb {
+    position: relative;
+}
+
+.examples-thumb::before{
+    display: inline-block;
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(77, 90, 229,0.7);
+    opacity: 0;
 }
 
 .examples-title {
@@ -516,3 +533,27 @@ h3 {
 .logo-studio-footer {
     color: var(--secondary-background-color);
 }
+
+.backdrop {
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    background-color:rgba(46, 47, 66, 0.4);
+}
+
+.backdrop.is-hidden {
+    opacity: 0;
+    pointer-events: none;
+}
+
+.modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 408px;
+    height: 576px;
+    background-color: var(--background-color);
+}    
