--- a/css/styles.css
+++ b/css/styles.css
@@ -70,6 +70,7 @@ h3 {
 }
 
 .navigation-link {
+    position: relative;
     color: var(--secondary-text-color);
     font-weight: 500;
     font-size: 16px;
@@ -77,11 +78,38 @@ h3 {
     text-decoration: none;
     padding-top: 15px;
     padding-bottom: 15px;
+
+    transition-property: color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .navigation-link:hover,
 .navigation-link:focus {
     color: var(--change-color-link);
+}
+
+
+.navigation-link::after {
+    position: absolute;
+    left: 0px;
+    bottom: -13px;
+    content: '';
+    display: block;
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+    background-color: var(--change-color-button);
+    opacity: 0;
+
+    transition-property: opacity;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.navigation-link:hover::after,
+.navigation-link:focus::after {
+    opacity: 1;
 }
 
 .navigation-list {
@@ -112,6 +140,10 @@ h3 {
     line-height: 1.5;
     text-decoration: none;
     font-style: normal;
+
+    transition-property: color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .contacts-link:hover,
@@ -148,6 +180,10 @@ h3 {
     border-radius: 4px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     padding: 16px 32px;
+
+    transition-property: background-color, border-color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .hero-button:hover,
@@ -199,7 +235,7 @@ h3 {
     border-radius: 4px;
     width: 264px;
     height: 112px;
-   }
+}
 
 .icon-decoration {
     width: 64px;
@@ -281,7 +317,11 @@ h3 {
     width: 40px;
     height: 40px;
     border-radius: 50%;
-    background-color: var(--change-color-link); 
+    background-color: var(--change-color-link);
+
+    transition-property: background-color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .massendger-link:hover,
@@ -326,6 +366,10 @@ h3 {
     border: 1px solid var(--light-slate);
     border-radius: 4px;
     fill: var(--light-slate);
+
+    transition-property: border-color, fill;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .customer-link:hover,
@@ -398,6 +442,10 @@ h3 {
     height: 40px;
     border-radius: 50%;
     background-color: var(--primary-text-color);
+
+    transition-property: background-color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .massendger-link-footer:hover,
@@ -441,28 +489,42 @@ h3 {
     display: block;
     text-decoration: none;
     color: var(--primary-text-color);
+
+    transition-property: box-shadow;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    /* transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 1000ms; */
 }
 
-.examples-link:hover {
+.examples-link:hover,
+.examples-link:focus {
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
-.examples-link:hover .examples-thumb::before {
+.examples-link:hover .examples-thumb::before,
+.examples-link:focus .examples-thumb::before {
     opacity: 1;
+    transform: translateY(0);
 }
 
 .examples-thumb {
     position: relative;
+    overflow: hidden;
 }
 
-.examples-thumb::before{
+.examples-thumb::before {
     display: inline-block;
     content: '';
     position: absolute;
     width: 100%;
     height: 100%;
-    background-color: rgba(77, 90, 229,0.7);
+    background-color: rgba(77, 90, 229, 1);
     opacity: 0;
+
+    transform: translateY(100%);
+    transition-property: opacity, transform;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .examples-title {
@@ -480,8 +542,6 @@ h3 {
     margin-bottom: 0px;
     margin-right: 0px;
 }
-
-
 
 /* Кнопки (портфолио) */
 .portfolio-list {
@@ -505,6 +565,10 @@ h3 {
     padding: 12px 24px;
     border-color: var(--third-text-color);
     border: 1px;
+
+    transition-property: background-color, color, box-shadow;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-button:hover,
@@ -534,13 +598,19 @@ h3 {
     color: var(--secondary-background-color);
 }
 
+/* Модальное окно */
 .backdrop {
     position: fixed;
     top: 0px;
     left: 0px;
     width: 100%;
     height: 100%;
-    background-color:rgba(46, 47, 66, 0.4);
+    background-color: rgba(46, 47, 66, 0.4);
+    opacity: 1;
+
+    transition-property: opacity;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .backdrop.is-hidden {
@@ -548,12 +618,31 @@ h3 {
     pointer-events: none;
 }
 
+.backdrop.is-hidden .modal {
+    transform: translate(-50%, -50%) scale(0.7)
+}
+
 .modal {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%) scale(1);
+    transition-property: transform;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     width: 408px;
     height: 576px;
     background-color: var(--background-color);
-}    
+}
+
+.btn {
+    position: absolute;
+    width: 24px;
+    height: 24px;
+    top: 24px;
+    right: 24px;
+    border-radius: 50%;
+    background: #E7E9FC;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+}
